# CEmu

./: .astylerc  .gitignore  .gitmodules  .qmake.conf  .travis.yml  404.html  BuildQt56DevArchive.py  BuildQt56StaticDevArchive.py  CEmu.pro  Info.plist  LICENSE  README.md  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  appveyor.yml  appveyor.yml.cache  appveyor_helper.py  build_website.sh  cemusettings.cpp  commands.cpp  core_test.cpp  debugwindow.cpp  debugwindow.h  debugwindow.ui  deploy_travisci.sh  disasmwidget.cpp  disasmwidget.h  download.html  emuthread.cpp  emuthread.h  generate.py  get_libpng-apng.sh  index.html  keybindings.cpp  keybindings.h  keybindings.ui  keymap.h  lcdwidget.cpp  lcdwidget.h  (+26 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
cemucore/: Makefile  cemucore.c  cemucore.h  compiler.h  core.c  (+17 more)
gui/qt/: CEmu.pro  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CalculatorWidget.cpp  CalculatorWidget.h  QArchive.cc  QArchive.hpp  autotesterthread.cpp  autotesterthread.h  basiccodeviewerwindow.cpp  basiccodeviewerwindow.h  basiccodeviewerwindow.ui  basicdebugger.cpp  calculatorwidget.cpp  calculatorwidget.h  capturewidget.cpp  capturewidget.h  cemuopts.h  console.cpp  console.h  consolewidget.cpp  consolewidget.h  corethread.cpp  corethread.h  corewindow.cpp  corewindow.h  corewrapper.cpp  corewrapper.h  datawidget.cpp  datawidget.h  debugger.cpp  debugger.h  disasmwidget.cpp  disasmwidget.h  dockedwidget.cpp  dockedwidget.h  dockwidget.cpp  dockwidget.h  emuthread.cpp  (+80 more)
gui/qt/.cmake/: try_static_libs.cmake
gui/qt/archive/: extractor.c  extractor.h
gui/qt/capture/: animated-png.c  animated-png.h  get_libpng-apng.sh  gif.cpp  gif.h  giffunc.c  giflib.h  gifread.c  gifsicle.h  gifwrite.c  kcolor.h  optimize.c  opttemplate.c  quantize.c  xform.c
gui/qt/capture/lcdf/: inttypes.h
gui/qt/capture/lcdfgif/: gif.h  gifx.h
gui/qt/debugger/: basicdebugger.cpp  cdebughighlighter.cpp  cdebughighlighter.h  debuginfo.cpp  debuginfo.h  disasm.cpp  disasm.h  disasmwidget.cpp  disasmwidget.h  hexwidget.cpp  hexwidget.h  memoryvisualizerwidget.cpp  memoryvisualizerwidget.h  sourceswidget.cpp  sourceswidget.h  visualizerdisplaywidget.cpp  visualizerdisplaywidget.h
gui/qt/deploy-scripts/: BuildQt510DevArchive.py  BuildQt510StaticDevArchive.py  BuildQt511DevArchive.py  BuildQt511StaticDevArchive.py  BuildQt512DevArchive.py  BuildQt512StaticDevArchive.py  BuildQt56DevArchive.py  BuildQt56StaticDevArchive.py  BuildQtDevArchive.py  appveyor_helper.py  build_status.py  ircmsgbot.py  qt_dev_archive.base.cfg  qt_dev_archive.dynold.amd64.cfg  qt_dev_archive.static.amd64.cfg  qt_dev_archive.static.x86.cfg  util.py
gui/qt/developer/: autotesterwidget.cpp  autotesterwidget.h  basicwidget.cpp  basicwidget.h  breakpointswidget.cpp  breakpointswidget.h  clockswidget.cpp  clockswidget.h  configurationwidget.cpp  configurationwidget.h  controlwidget.cpp  controlwidget.h  cpuwidget.cpp  cpuwidget.h  devmiscwidget.cpp  devmiscwidget.h  devwidget.h  disassemblywidget.cpp  disassemblywidget.h  flashramwidget.cpp  flashramwidget.h  memorywidget.cpp  memorywidget.h  osstackswidget.cpp  osstackswidget.h  osvarswidget.cpp  osvarswidget.h  osvarwidget.cpp  performancewidget.cpp  performancewidget.h  portmonitorwidget.cpp  portmonitorwidget.h  sourceswidget.cpp  sourceswidget.h  usbwidget.cpp  usbwidget.h  visualizerwidget.cpp  visualizerwidget.h  watchpointswidget.cpp  watchpointswidget.h
gui/qt/developer/widgets/: disasmwidget.cpp  disasmwidget.h  disassembler.cpp  disassembler.h  disassemblerwidget.cpp  disassemblerwidget.h  disassembly.cpp  disassembly.h  disassemblyview.cpp  disassemblyview.h  hexwidget.cpp  hexwidget.h  highlighteditwidget.cpp  highlighteditwidget.h  memwidget.cpp  memwidget.h  sliderpanner.cpp  sliderpanner.h  visualizerlcdwidget.cpp  visualizerlcdwidget.h  visualizerwidget.cpp  visualizerwidget.h
gui/qt/i18n/: es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  nl_NL.qm  nl_NL.ts  zh_CN.qm  zh_CN.ts
gui/qt/keypad/: alphakey.h  arrowkey.cpp  arrowkey.h  graphkey.h  key.h  keycode.h  keyconfig.h  keymap.cpp  keymap.h  keypadwidget.cpp  keypadwidget.h  numkey.h  operkey.h  otherkey.h  qtkeypadbridge.cpp  qtkeypadbridge.h  rectkey.cpp  rectkey.h  secondkey.h
gui/qt/os/mac/: kdmactouchbar.h  kdmactouchbar.mm  kdmactouchbar_global.h
gui/qt/qhexedit/: chunks.cpp  chunks.h  commands.cpp  commands.h  qhexedit.cpp  qhexedit.h
gui/qt/qml/: Keypad.qml  NBigButton.qml  NButton.qml
gui/qt/resources/icons/: icon.icns
gui/qt/resources/icons/linux/: make_icons.sh
gui/qt/resources/linux/: cemu.desktop  cemu.xml
gui/qt/resources/windows/: cemu.rc
gui/qt/runerbot/: ops.c  ops.txt  parse.c  runerbot.h
gui/qt/tivars_lib_cpp/: tivars_lib_cpp.cpp  tivars_lib_cpp.hpp
gui/qt/tivarslib/: BinaryFile.cpp  BinaryFile.h  CommonTypes.h  TIModel.cpp  TIModel.h  TIModels.cpp  TIModels.h  TIVarFile.cpp  TIVarFile.h  TIVarType.cpp  TIVarType.h  TIVarTypes.cpp  TIVarTypes.h  autoloader.h  tivarslib_utils.cpp  tivarslib_utils.h  utils_tivarslib.cpp  utils_tivarslib.h
gui/qt/tivarslib/TypeHandlers/: DummyHandler.cpp  ITIVarTypeHandler.h  STH_DataAppVar.cpp  STH_ExactFraction.cpp  STH_ExactFractionPi.cpp  STH_ExactPi.cpp  STH_ExactRadical.cpp  STH_FP.cpp  STH_PythonAppVar.cpp  TH_0x00.cpp  TH_0x00.h  TH_0x01.cpp  TH_0x01.h  TH_0x02.cpp  TH_0x03.h  TH_0x04.h  TH_0x05.cpp  TH_0x05.h  TH_0x06.h  TH_0x0C.cpp  TH_0x0D.cpp  TH_0x15.cpp  TH_0x1B.cpp  TH_0x1C.cpp  TH_0x1D.cpp  TH_0x1E.cpp  TH_0x1F.cpp  TH_0x20.cpp  TH_0x21.cpp  TH_AppVar.cpp  TH_GenericAppVar.cpp  TH_GenericComplex.cpp  TH_GenericList.cpp  TH_GenericReal.cpp  TH_Matrix.cpp  TH_TempEqu.cpp  TH_Tokenized.cpp  TypeHandlerFuncGetter.h  TypeHandlers.h  programs_tokens.csv
gui/qt/triplets/: x64-linux-dynamic-apng-release.cmake  x64-linux-dynamic-apng.cmake  x64-osx-minver-release.cmake  x64-osx-minver.cmake  x64-osx-release.cmake  x86-windows-static-release.cmake
tests/autotester/: CMakeLists.txt  Makefile  autotester.cpp  autotester.h  autotester_cli.cpp  crc32.hpp  json11.hpp  json_file_documentation.txt  test_graphc_example.json
(+344 files in other folders)
